# taichi_dem

./: .gitignore  README.md  README_zh-Hans.md  dem.py  dem2.py  dem3.py  dem4.py  dem5.py  dem6.py  demo_3.py  input.p4p  launch.py  visualizer.hipnc
Resources/: cube_911_particles_impact.p4p
dem/: BroadPhaseCollisionDetection.py  DEMSolverStatistics.py  DataClass.py  DemConfig.py  PrefixSumExecutor.py  TimeSequence.py  TypeDefine.py  Utils.py  dem.py  visualizer.hipnc
input_data/: belt.txt  color_diffuse.csv  input.p4c  input.p4p  visualizer.hipnc
input_data/SGF/: SGF0-100.csv  SGF0-3000.csv  SGF100-200.csv  SGF3001-6000.csv
input_data/SGF/Alternative/: SGF0-100.csv  SGF95000-100000.csv
specimen/: CMakeLists.txt  specimen.cpp  specimen.sln  specimen.vcxproj  specimen.vcxproj.filters
taichi_dem_cpp_equivalent/: basic_setup.h  dataclass.cpp  dataclass.h  pch.h  taichi_dem_cpp_equivalent.cpp  taichi_dem_cpp_equivalent.sln  taichi_dem_cpp_equivalent.vcxproj  type_definition.h  utils.cpp  utils.h
